# RP2040-GNUBoy

./: .gitignore  CMakeLists.txt  README.md  makefile.macos
.github/workflows/: rp2040_build.yml
assets/: rom.c
include/: input.h  lcd.h  loader.h  rc.h  refresh.h  sys.h
src/: cpu.c  emu.c  exports.c  lcd.c  loader.c  main.c  rccmds.c  refresh.c  sound.c
sys/pico/: CMakeLists.txt  audio.cpp  file.cpp  file.hpp  input.cpp  input.hpp  rp2040.c  rp2040.cpp  st7789.cpp  st7789.hpp  st7789.pio  usb.cpp  usb.hpp  video.cpp  video.hpp
